en-vi : Proceed Voting +User Management

--- a/src/assets/i18n/en_clean.json
+++ b/src/assets/i18n/en_clean.json
@@ -105,53 +105,8 @@
     "termName": "Term Name",
     "maxCandidates": "Maximum candidates",
     "candidateList": "Candidate List",
-    "votedCandidates": "Voted Candidates",    "viewDetails": "View Details",
-    "notVotedForAnyCandidate": "Not voted for any candidate yet"
-  },
-  "UserDetails": {
-    "title": "Detailed Information",
-    "avatar": "Avatar",
-    "fullName": "Full Name",
-    "username": "Username",
-    "idCard": "ID Card Number",
-    "dateOfBirth": "Date of Birth",
-    "gender": "Gender",
-    "male": "Male",
-    "female": "Female",
-    "phoneNumber": "Phone Number",
-    "email": "Email",
-    "address": "Address",    "close": "Close"
-  },
-  "ResultVoting": {
-    "title": "Election Results",
-    "backToList": "Back to List",
-    "electionInfo": "Election Information",
-    "leader": "Leading Candidate",
-    "totalCandidates": "Total Candidates",
-    "totalVoters": "Total Voters",
-    "chartStatistics": "Chart Statistics",
-    "columnChart": "Column",
-    "pieChart": "Pie",
-    "candidateList": "Candidate List",
-    "voterList": "Voter List",
-    "serialNumber": "No.",
-    "fullName": "Full Name",
-    "email": "Email",
-    "phoneNumber": "Phone Number",
-    "dateOfBirth": "Date of Birth",
-    "voteCount": "Vote Count",
-    "voting": "Voting",
-    "voted": "Voted",
-    "notVoted": "Not Voted",
-    "emptyList": "Empty List",
-    "totalVoteCount": "Total Vote Count",
-    "startDate": "Start Date",
-    "endDate": "End Date",
-    "position": "Position",
-    "status": "Status",
-    "notStarted": "Not Started",
-    "ongoing": "Ongoing",
-    "completed": "Completed"
+    "votedCandidates": "Voted Candidates",
+    "viewDetails": "View Details"
   },
   "UnitItem": {
     "unfinished": "Unfinished",
