--- a/src/assets/i18n/vi_clean.json
+++ b/src/assets/i18n/vi_clean.json
@@ -44,7 +44,8 @@
     "startDate": "Ngày bắt đầu",
     "voteCount": "Số lượng phiếu bầu",
     "candidate": "Ứng cử viên"
-  },  "UserManagement": {
+  },
+  "UserManagement": {
     "title": "Quản lý người dùng",
     "description": "Quản lý và theo dõi người dùng trong hệ thống",
     "addNewUser": "Thêm mới người dùng",
@@ -69,12 +70,9 @@
     "enable": "Kích hoạt",
     "createdDate": "Ngày tạo",
     "lastLogin": "Đăng nhập cuối",
-    "details": "Chi tiết",
-    "serialNumber": "STT",
-    "username": "Tên đăng nhập",
-    "dateOfBirth": "Ngày sinh",
-    "address": "Địa chỉ"
-  },  "ProceedVoting": {
+    "details": "Chi tiết"
+  },
+  "ProceedVoting": {
     "title": "Tiến hành bầu cử",
     "description": "Tham gia và bầu cử trong các cuộc bầu cử",
     "searchAndFilter": "Bộ lọc tìm kiếm",
@@ -97,59 +95,7 @@
     "notVoted": "Chưa bầu",
     "voted": "Đã bầu",
     "voteNow": "Bầu ngay",
-    "seeResults": "Xem kết quả",
-    "generalInfo": "Thông tin chung",
-    "termInfo": "Thông tin nhiệm kỳ",
-    "termName": "Tên nhiệm kỳ",
-    "maxCandidates": "Số ứng viên tối đa",
-    "candidateList": "Danh sách ứng viên",
-    "votedCandidates": "Ứng viên đã bỏ phiếu",    "viewDetails": "Xem chi tiết",
-    "notVotedForAnyCandidate": "Chưa bỏ phiếu cho ứng viên nào"
-  },
-  "UserDetails": {
-    "title": "Thông tin chi tiết",
-    "avatar": "Ảnh đại diện",
-    "fullName": "Họ và tên",
-    "username": "Username",
-    "idCard": "Căn cước công dân",
-    "dateOfBirth": "Ngày tháng năm sinh",
-    "gender": "Giới tính",
-    "male": "Nam",
-    "female": "Nữ",
-    "phoneNumber": "Số điện thoại",
-    "email": "Email",
-    "address": "Sinh sống",    "close": "Đóng"
-  },
-  "ResultVoting": {
-    "title": "Kết quả bầu cử",
-    "backToList": "Quay lại",
-    "electionInfo": "Thông tin cuộc bầu cử",
-    "leader": "Người dẫn đầu",
-    "totalCandidates": "Tổng số ứng viên",
-    "totalVoters": "Tổng số cử tri",
-    "chartStatistics": "Biểu đồ thống kê",
-    "columnChart": "Cột",
-    "pieChart": "Tròn",
-    "candidateList": "Danh sách ứng viên",
-    "voterList": "Danh sách cử tri",
-    "serialNumber": "STT",
-    "fullName": "Họ và tên",
-    "email": "Email",
-    "phoneNumber": "Số điện thoại",
-    "dateOfBirth": "Ngày sinh",
-    "voteCount": "Số phiếu bầu",
-    "voting": "Bầu cử",
-    "voted": "Đã bầu",
-    "notVoted": "Chưa bầu",
-    "emptyList": "Danh sách trống",
-    "totalVoteCount": "Tổng số phiếu bầu",
-    "startDate": "Bắt đầu",
-    "endDate": "Kết thúc",
-    "position": "Chức vụ",
-    "status": "Trạng thái",
-    "notStarted": "Chưa bắt đầu",
-    "ongoing": "Đang diễn ra",
-    "completed": "Đã kết thúc"
+    "seeResults": "Xem kết quả"
   },
   "UnitItem": {
     "unfinished": "Chưa hoàn thành",
