en-vi : Follow elec +elec manage

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -331,8 +331,114 @@
     "required": "Required",
     "wrongPhoneNumber": "Wrong Phone Number",
     "wrongEmail": "Wrong Email"
-  },
-  "profile": {
+  },  "profile": {
     "doNotLeaveEmpty": "Do not leave empty!"
+  },
+  "ElectionFollow": {
+    "title": "Follow Election",
+    "description": "Track and view election results",
+    "searchAndFilter": "Search & Filter",
+    "electionName": "Election Name",
+    "status": "Status",
+    "allStatuses": "All Statuses",
+    "search": "Search",
+    "cancel": "Cancel",
+    "enterElectionName": "Enter election name...",
+    "loadingElections": "Loading election list...",
+    "noElections": "No elections yet",
+    "noElectionsDescription": "You are not a candidate for any election yet. Please wait or contact the administrator for more information.",
+    "refreshTip": "Tip: You can refresh the page to check for new elections",
+    "generalInfo": "General Information",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "maxCandidates": "Maximum Candidates",
+    "status": "Status",
+    "ongoing": "Ongoing",
+    "completed": "Completed",
+    "notStarted": "Not Started",
+    "termInfo": "Term Information",
+    "termName": "Term Name",
+    "termStartDate": "Start Date",
+    "termEndDate": "End Date",
+    "viewDetails": "View Details",
+    "candidateList": "Candidate List",
+    "electionDetails": "Election Details",
+    "backToList": "Back to List",
+    "electionInfo": "Election Information",
+    "electionNameDetail": "Election Name",
+    "electionStartTime": "Election start time",
+    "electionEndTime": "Election end time",
+    "position": "Position",
+    "leadingCandidate": "Leading Candidate",
+    "totalVotes": "Total Votes",
+    "totalCandidates": "Total Candidates",
+    "totalVoters": "Total Voters",
+    "chartStatistics": "Chart Statistics",
+    "chartType": "Chart Type"
+  },
+  "ElectionManagement": {
+    "title": "Election Management",
+    "description": "Create and manage elections in the system",
+    "createNewElection": "Create New Election",
+    "searchAndFilter": "Search & Filter",
+    "electionName": "Election Name",
+    "status": "Status",
+    "allStatuses": "All Statuses",
+    "search": "Search",
+    "cancel": "Cancel",
+    "enterElectionName": "Enter election name...",
+    "loadingData": "Loading election data...",
+    "noElections": "No elections yet",
+    "noElectionsDescription": "Create your first election to get started",
+    "createNewElectionBtn": "Create New Election",
+    "generalInfo": "General Information",
+    "term": "Term",
+    "termDuration": "Term Duration",
+    "maxCandidates": "Maximum Candidates",
+    "candidates": "Candidates",
+    "voters": "Voters",
+    "scrollToViewAll": "Scroll horizontally to view all candidates",
+    "viewDetails": "View Details",
+    "editElection": "Edit Election",
+    "deleteElection": "Delete Election",
+    "status": "Status",
+    "ongoing": "Ongoing",
+    "completed": "Completed",
+    "notStarted": "Not Started",
+    "electionTime": "Time",
+    "candidate": "candidate",
+    "candidates": "candidates",
+    "voter": "voter",
+    "voters": "voters"
+  },
+  "ElectionManagementAdd": {
+    "addNewElection": "Add New Election",
+    "editElection": "Edit Election",
+    "loadingElectionInfo": "Loading election information...",
+    "electionName": "Election Name",
+    "position": "Position",
+    "maxCandidatesVote": "Maximum candidates to vote",
+    "electionStartDate": "Election start date",
+    "electionEndDate": "Election end date",
+    "termName": "Term name",
+    "termStartDate": "Term start date",
+    "termEndDate": "Term end date",
+    "candidateList": "List of participating candidates",
+    "voterList": "List of participating voters",
+    "loadingPositions": "Loading positions...",
+    "loadingList": "Loading list...",
+    "ongoingElectionWarning": "Election is ongoing, cannot edit",
+    "completedElectionWarning": "Election has ended, cannot edit",
+    "addNew": "Add New",
+    "edit": "Edit",
+    "cancel": "Cancel"
+  },  "DeleteElectionPopup": {
+    "confirmDelete": "Confirm Delete",
+    "confirmDeleteMessage": "Are you sure you want to cancel the election",
+    "questionMark": "?",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "deleteSuccess": "Deleted successfully!",
+    "deleteError": "Delete failed!"
   }
 }
