--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -333,8 +333,114 @@
     "required": "Không bỏ trống",
     "wrongPhoneNumber": "Sai số điện thoại",
     "wrongEmail": "Sai email"
-  },
-  "profile": {
+  },  "profile": {
     "doNotLeaveEmpty": "Không bỏ trống trường này!"
+  },
+  "ElectionFollow": {
+    "title": "Theo dõi Bầu cử",
+    "description": "Theo dõi và xem kết quả các cuộc bầu cử",
+    "searchAndFilter": "Tìm kiếm & Lọc",
+    "electionName": "Tên cuộc bầu cử",
+    "status": "Trạng thái",
+    "allStatuses": "Tất cả trạng thái",
+    "search": "Tìm kiếm",
+    "cancel": "Huỷ bỏ",
+    "enterElectionName": "Nhập tên cuộc bầu cử...",
+    "loadingElections": "Đang tải danh sách cuộc bầu cử...",
+    "noElections": "Chưa có cuộc bầu cử nào",
+    "noElectionsDescription": "Bạn chưa là ứng viên của cuộc bầu cử nào. Hãy chờ đợi hoặc liên hệ với quản trị viên để biết thêm thông tin.",
+    "refreshTip": "Mẹo: Bạn có thể làm mới trang để kiểm tra cuộc bầu cử mới",
+    "generalInfo": "Thông tin chung",
+    "startDate": "Bắt đầu",
+    "endDate": "Kết thúc",
+    "maxCandidates": "Số ứng viên tối đa",
+    "status": "Trạng thái",
+    "ongoing": "Đang diễn ra",
+    "completed": "Đã kết thúc",
+    "notStarted": "Chưa bắt đầu",
+    "termInfo": "Thông tin nhiệm kỳ",
+    "termName": "Tên nhiệm kỳ",
+    "termStartDate": "Bắt đầu",
+    "termEndDate": "Kết thúc",
+    "viewDetails": "Xem chi tiết",
+    "candidateList": "Danh sách ứng viên",
+    "electionDetails": "Chi tiết cuộc bầu cử",
+    "backToList": "Quay lại",
+    "electionInfo": "Thông tin cuộc bầu cử",
+    "electionNameDetail": "Tên cuộc bầu cử",
+    "electionStartTime": "Thời gian bắt đầu cuộc bầu cử",
+    "electionEndTime": "Thời gian kết thúc cuộc bầu cử",
+    "position": "Chức vụ",
+    "leadingCandidate": "Người dẫn đầu",
+    "totalVotes": "Tổng số phiếu bầu",
+    "totalCandidates": "Tổng số ứng viên",
+    "totalVoters": "Tổng số cử tri",
+    "chartStatistics": "Biểu đồ thống kê",
+    "chartType": "Loại biểu đồ"
+  },
+  "ElectionManagement": {
+    "title": "Quản lý Cuộc bầu cử",
+    "description": "Tạo và quản lý các cuộc bầu cử trong hệ thống",
+    "createNewElection": "Tạo cuộc bầu cử mới",
+    "searchAndFilter": "Tìm kiếm & Lọc",
+    "electionName": "Tên cuộc bầu cử",
+    "status": "Trạng thái",
+    "allStatuses": "Tất cả trạng thái",
+    "search": "Tìm kiếm",
+    "cancel": "Huỷ bỏ",
+    "enterElectionName": "Nhập tên cuộc bầu cử...",
+    "loadingData": "Đang tải dữ liệu cuộc bầu cử...",
+    "noElections": "Chưa có cuộc bầu cử nào",
+    "noElectionsDescription": "Hãy tạo cuộc bầu cử đầu tiên để bắt đầu",
+    "createNewElectionBtn": "Tạo cuộc bầu cử mới",
+    "generalInfo": "Thông tin chung",
+    "term": "Nhiệm kỳ",
+    "termDuration": "Thời gian nhiệm kỳ",
+    "maxCandidates": "Số ứng viên tối đa",
+    "candidates": "Ứng viên",
+    "voters": "Cử tri",
+    "scrollToViewAll": "Cuộn ngang để xem tất cả ứng viên",
+    "viewDetails": "Xem chi tiết",
+    "editElection": "Chỉnh sửa cuộc bầu cử",
+    "deleteElection": "Xóa cuộc bầu cử",
+    "status": "Trạng thái",
+    "ongoing": "Đang diễn ra",
+    "completed": "Đã kết thúc",
+    "notStarted": "Chưa bắt đầu",
+    "electionTime": "Thời gian",
+    "candidate": "ứng viên",
+    "candidates": "ứng viên",
+    "voter": "cử tri",
+    "voters": "cử tri"
+  },
+  "ElectionManagementAdd": {
+    "addNewElection": "Thêm mới cuộc bầu cử",
+    "editElection": "Chỉnh sửa cuộc bầu cử",
+    "loadingElectionInfo": "Đang tải thông tin cuộc bầu cử...",
+    "electionName": "Tên cuộc bầu cử",
+    "position": "Chức vụ",
+    "maxCandidatesVote": "Số ứng viên tối đa được bầu",
+    "electionStartDate": "Ngày bắt đầu cuộc bầu cử",
+    "electionEndDate": "Ngày kết thúc cuộc bầu cử",
+    "termName": "Tên nhiệm kỳ",
+    "termStartDate": "Ngày bắt đầu nhiệm kỳ",
+    "termEndDate": "Ngày kết thúc nhiệm kỳ",
+    "candidateList": "Danh sách các ứng viên thâm gia",
+    "voterList": "Danh sách các cử tri tham gia",
+    "loadingPositions": "Đang tải chức vụ...",
+    "loadingList": "Đang tải danh sách...",
+    "ongoingElectionWarning": "Cuộc bầu cử đang diễn ra, không thể chỉnh sửa",
+    "completedElectionWarning": "Cuộc bầu cử đã kết thúc, không thể chỉnh sửa",
+    "addNew": "Thêm mới",
+    "edit": "Chỉnh sửa",
+    "cancel": "Huỷ bỏ"
+  },  "DeleteElectionPopup": {
+    "confirmDelete": "Xác nhận xóa",
+    "confirmDeleteMessage": "Bạn có chắc chắn muốn huỷ bỏ cuộc bầu cử",
+    "questionMark": " không?",
+    "cancel": "Hủy",
+    "delete": "Xoá",
+    "deleteSuccess": "Xoá thành công!",
+    "deleteError": "Xoá thất bại!"
   }
 }
