en-vi :  position manage

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -440,5 +440,75 @@
     "delete": "Delete",
     "deleteSuccess": "Deleted successfully!",
     "deleteError": "Delete failed!"
+  },
+  "PositionManagement": {
+    "title": "Position Management",
+    "description": "Manage positions in the system",
+    "addNew": "Add New Position",
+    "search": "Search:",
+    "searchPlaceholder": "Enter position name to search...",
+    "filter": "Filter",
+    "allStatuses": "All Statuses",
+    "active": "Active",
+    "inactive": "Inactive",
+    "status": "Status",
+    "createdDateFrom": "Created Date (From):",
+    "createdDateTo": "Created Date (To):",
+    "reset": "Reset",
+    "apply": "Apply",
+    "positionList": "Position List",
+    "totalCount": "Total:",
+    "showing": "Showing:",
+    "loadingData": "Loading data...",
+    "serialNumber": "STT",
+    "positionName": "Position Name",
+    "description": "Description",    "actions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "noDescription": "No description",
+    "locked": "Locked",
+    "noData": "No Data",
+    "noMatchingFilters": "No positions found matching the filters. Try adjusting the filters.",
+    "noPositionsCreated": "No positions have been created in the system yet.",
+    "clearFilters": "Clear Filters",
+    "displayPerPage": "/ page",
+    "displaying": "Displaying",
+    "to": "to",
+    "of": "of",
+    "results": "results",
+    "activeFilters": "Active filters:",
+    "statusFilter": "Status:",
+    "fromDate": "From date:",
+    "toDate": "To date:",
+    "clearAllFilters": "Clear all filters"
+  },
+  "PositionManagementAdd": {
+    "addTitle": "Add New Position",
+    "editTitle": "Edit Position",
+    "addSubtitle": "Create a new position in the system",
+    "editSubtitle": "Update position information",
+    "positionName": "Position Name",
+    "positionNamePlaceholder": "Enter position name",
+    "description": "Description",
+    "descriptionPlaceholder": "Enter detailed description of this position",
+    "status": "Status",
+    "selectStatus": "-- Select Status --",
+    "required": "This field is required",
+    "cancel": "Cancel",
+    "add": "Add New",
+    "update": "Update",
+    "addSuccess": "Position added successfully!",
+    "updateSuccess": "Position updated successfully!",
+    "addError": "Failed to add position!",
+    "updateError": "Failed to update position!"
+  },  "DeletePositionPopup": {
+    "confirmDelete": "Confirm Delete",
+    "confirmDeleteMessage": "Are you sure you want to delete position",
+    "questionMark": "?",
+    "warningMessage": "This action cannot be undone. All data related to this position will be permanently deleted.",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "deleteSuccess": "Position deleted successfully!",
+    "deleteError": "Failed to delete position!"
   }
 }
