--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -442,5 +442,75 @@
     "delete": "Xoá",
     "deleteSuccess": "Xoá thành công!",
     "deleteError": "Xoá thất bại!"
+  },
+  "PositionManagement": {
+    "title": "Quản lý Chức vụ",
+    "description": "Quản lý các chức vụ trong hệ thống",
+    "addNew": "Thêm chức vụ mới",
+    "search": "Tìm kiếm:",
+    "searchPlaceholder": "Nhập tên chức vụ để tìm kiếm...",
+    "filter": "Lọc",
+    "allStatuses": "Tất cả trạng thái",
+    "active": "Hoạt động",
+    "inactive": "Bị khóa",
+    "status": "Trạng thái",
+    "createdDateFrom": "Ngày tạo (từ):",
+    "createdDateTo": "Ngày tạo (đến):",
+    "reset": "Đặt lại",
+    "apply": "Áp dụng",
+    "positionList": "Danh sách chức vụ",
+    "totalCount": "Tổng số:",
+    "showing": "Hiển thị:",
+    "loadingData": "Đang tải dữ liệu...",
+    "serialNumber": "STT",
+    "positionName": "Tên chức vụ",
+    "description": "Mô tả",
+    "actions": "Thao tác",
+    "edit": "Chỉnh sửa",
+    "delete": "Xóa",
+    "noDescription": "Chưa có mô tả",
+    "locked": "Bị khóa",
+    "noData": "Không có dữ liệu",
+    "noMatchingFilters": "Không tìm thấy chức vụ nào phù hợp với bộ lọc. Hãy thử điều chỉnh lại bộ lọc.",
+    "noPositionsCreated": "Chưa có chức vụ nào được tạo trong hệ thống.",    "clearFilters": "Xóa bộ lọc",
+    "displayPerPage": "/ trang",
+    "displaying": "Hiển thị",
+    "to": "đến",
+    "of": "trong tổng số",
+    "results": "kết quả",
+    "activeFilters": "Bộ lọc đang áp dụng:",
+    "statusFilter": "Trạng thái:",
+    "fromDate": "Từ ngày:",
+    "toDate": "Đến ngày:",
+    "clearAllFilters": "Xóa tất cả bộ lọc"
+  },
+  "PositionManagementAdd": {
+    "addTitle": "Thêm chức vụ mới",
+    "editTitle": "Chỉnh sửa chức vụ",
+    "addSubtitle": "Tạo một chức vụ mới trong hệ thống",
+    "editSubtitle": "Cập nhật thông tin chức vụ",
+    "positionName": "Tên chức vụ",
+    "positionNamePlaceholder": "Nhập tên chức vụ",
+    "description": "Mô tả",
+    "descriptionPlaceholder": "Nhập mô tả chi tiết về chức vụ này",
+    "status": "Trạng thái",
+    "selectStatus": "-- Chọn trạng thái --",
+    "required": "Trường này không được để trống",
+    "cancel": "Hủy bỏ",
+    "add": "Thêm mới",
+    "update": "Cập nhật",
+    "addSuccess": "Thêm chức vụ thành công!",
+    "updateSuccess": "Cập nhật chức vụ thành công!",
+    "addError": "Thêm chức vụ thất bại!",
+    "updateError": "Cập nhật chức vụ thất bại!"
+  },  "DeletePositionPopup": {
+    "confirmDelete": "Xác nhận xóa",
+    "confirmDeleteMessage": "Bạn có chắc chắn muốn xóa chức vụ",
+    "questionMark": " không?",
+    "warningMessage": "Hành động này không thể hoàn tác. Tất cả dữ liệu liên quan đến chức vụ này sẽ bị xóa vĩnh viễn.",
+    "cancel": "Hủy bỏ",
+    "delete": "Xác nhận xóa",
+    "deleteSuccess": "Xóa chức vụ thành công!",
+    "deleteError": "Xóa chức vụ thất bại!"
   }
 }
